# Abith619

./: .gitignore  AISnake.py  Api_Decorators.py  Bitcoin_Mining.py  Chat_bot.py  DataScience.py  Database-Project.odb  Database-Project.odb.lck  Django.py  ECE.py  Flask.py  Flask.txt  Js,CsS-NoteS  Jupyter.ipynb  LICENSE.md  Machine Learning.py  Project-make  Project.ipynb  Project.py  PyThOn.py  QR_Code_Generator.ipynb  README.md  Reddit_Bot.py  Rolling_Dice.ipynb  Sales-Prediction-of-Walmart-using-Machine-Learning.ipynb  Sample Programs  Tic Tac Toe GUI.py  Use_Phone _Camera _with _Python.py  XML-RPC-API.py  speech_Recognition.py  the advanced concepts of python.py
.github/workflows/: Sentiment-analysis  main.yml
ALM/odoo-custom-addons/: LICENSE  README.md  js_odoo_module_obfuscate.py  main.py  py_odoo_module_obfuscate.py
Django/: manage.py
Django-project1/portfolio/: forms.py  models.py  urls.py  views.py
Django-project1/project1/: asgi.py  settings.py  urls.py  wsgi.py
InterView-Project/School/: db.sqlite3
Odoo-School/: __manifest__.py
Odoo-School/models/: __init__.py  inherit.py  model.py  teacher.py
Odoo-School/reports/: pdf.xml
Odoo-School/security/: ir.model.access.csv
Odoo-School/views/: Inherit.xml  teacher.xml  teacher1.xml  view.xml
Orthanc/: .hg_archival.txt  .hgignore  AUTHORS  CMakeLists.txt  NEWS  README
Orthanc/Plugin/: DecodedImageAdapter.cpp  DecodedImageAdapter.h  Plugin.cpp  SeriesInformationAdapter.cpp  SeriesInformationAdapter.h  ViewerPrefetchPolicy.cpp  ViewerPrefetchPolicy.h  ViewerToolbox.cpp  ViewerToolbox.h
Orthanc/Plugin/Cache/: CacheIndex.h  CacheManager.cpp  CacheManager.h  CacheScheduler.cpp  CacheScheduler.h  ICacheFactory.h  IPrefetchPolicy.h
Orthanc/Resources/: BuildInstructions.txt  ImplementationNotes.txt  OrthancExplorer.js  SyncOrthancFolder.py  holy-build-box-compile.sh  holy-build-box-internal.sh
Orthanc/Resources/CMake/: JavaScriptLibraries.cmake
Orthanc/UnitTestsSources/: UnitTestsMain.cpp
Orthanc/WebApplication/: jpeg-decoder.js  viewer.css  viewer.html  viewer.js
Pattern Programs/: 1.py  16.py  19.py  2.py  6.py
Pattern Programs/Act-1/: 14.py  15.py  16.py  2.py  3.py  4.py  6.py  8.py  9.py  workspace.code-workspace
Pattern Programs/Act-10/: 1.py  2.py  3.py  4.py  5.py
Pattern Programs/Act-11/: 1.py  2.py  3.py
Pattern Programs/Act-12/: 1.py  123.txt  2.py  3.py  4.py
Pattern Programs/Act-13/: 1.py  2.py  3.py
Pattern Programs/Act-14/: 1.py  123.txt  124.txt  2.py  3.py  4.py  5.py  file3.txt  file_out.txt  result.txt
Pattern Programs/Act-15/: 1.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py
Pattern Programs/Act-16/: 1.py  10.py  11.py  12.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  test.py
Pattern Programs/Act-17/: 1.py  10.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  test.py
Pattern Programs/Act-2/: 1.py  10.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
Pattern Programs/Act-3/: 1.py  10.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  test.py
Pattern Programs/Act-4/: 1.py  10.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
Pattern Programs/Act-5/: 1.py  10.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  test.py
Pattern Programs/Act-6/: 1.py  2.py  3.py  4.py  5.py  6.py  7.py
Pattern Programs/Act-7/: 1.py  10.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
Pattern Programs/Act-8/: 1.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
Pattern Programs/Act-9/: 1.py  2.py  3.py  4.py  5.py
Pattern Programs/Day2/: 1.py  11.py  12.py  13.py  14.py  15.py  16.py  18.py  19.py  2.py  21.py  22.py  24.py  25.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
Pattern Programs/activity/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  3.py  5.py  6.py  7.py  Python Activity 2.docx  test.py
Pattern Programs/day1/: 10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
Pattern Programs/day3/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  21.py  22.py  23.py  24.py  25.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
Slicer/: Slicer
Slicer/lib/: libvtkChartsCore-9.1.so.1  libvtkCommon-9.1.so.1  libvtkCommonPython-9.1.so.1  libvtkDICOMParser-9.1.so.1  libvtkDomainsChemistry-9.1.so.1  libvtkDomainsChemistryOpenGL2-9.1.so.1  libvtkFilters-9.1.so.1  libvtkFilters-9.1.so.9.1.0  libvtkFiltersFlowPaths-9.1.so.1  libvtkFiltersHybrid-9.1.so.9.1.0  libvtkFiltersPython-9.1.so.9.1.0  libvtkGUISupportQt-9.1.so.1  libvtkGUISupportQtSQL-9.1.so.1  libvtkGeovisCore-9.1.so.1  libvtkIO-9.1.so.1  libvtkIOAsynchronous-9.1.so.9.1.0  libvtkIOCONVERGECFD-9.1.so.1  libvtkIOChemistry-9.1.so.1  libvtkIOExport-9.1.so.1  libvtkIOExportGL2PS-9.1.so.9.1.0  libvtkIOExportPDF-9.1.so.9.1.0  libvtkIOIOSS-9.1.so.9.1.0  libvtkIOImport-9.1.so.9.1.0  libvtkIOInfovis-9.1.so.9.1.0  libvtkIOMINC-9.1.so.9.1.0  libvtkIOMotionFX-9.1.so.9.1.0  libvtkIOTecplotTable-9.1.so.9.1.0  libvtkImaging-9.1.so.1  libvtkImaging-9.1.so.9.1.0  libvtkImagingHybrid-9.1.so.1  libvtkInfovisCore-9.1.so.9.1.0  libvtkInfovisLayout-9.1.so.1  libvtkInteraction-9.1.so.1  libvtkInteraction-9.1.so.9.1.0  libvtkOpenGL-9.1.so.1  libvtkOpenGL-9.1.so.9.1.0  libvtkParallel-9.1.so.1  libvtkPythonContext2D-9.1.so.1  libvtkPythonInterpreter-9.1.so.1  libvtkRendering-9.1.so.1  (+46 more)
Slicer/libexec/: QtWebEngineProcess  qt.conf
Slicer/resources/: qtwebengine_devtools_resources.pak  qtwebengine_resources.pak  (+2 more)
SlicerDICOMDatabase/: ctkDICOM.sql  ctkDICOMTagCache.sql
Task/: Api_Decorators.py  PYTHON ACTIVITY 10.docx  PYTHON ACTIVITY 11.docx  PYTHON ACTIVITY 12.docx  PYTHON ACTIVITY 13.docx  PYTHON ACTIVITY 14.docx  PYTHON ACTIVITY 15.docx  PYTHON ACTIVITY 16.docx  PYTHON ACTIVITY 17.docx  PYTHON ACTIVITY 18.docx  PYTHON ACTIVITY 5.docx  PYTHON ACTIVITY 7.docx  PYTHON ACTIVITY 8.docx  PYTHON ACTIVITY 9.docx  Python Activity 1.docx  Python Activity 3.docx  Python Activity 4.docx  XML-RPC-API.py  email-abithrajs@xmedia.in.mobileconfig  workers.py
odoo-custom-addons/: testfile
pydicom/: dicom.py  dicom_img.py
(+8975 files in other folders)
